<resources>
    <string name="app_name">Path Of Lowest Cost</string>
    <string name="no_results">No results</string>
    <string name="click_go_message">Then click below to find the lowest cost path:</string>
    <string name="go_button_title">GO!</string>
    <string name="grid_contents_title">Grid Contents</string>
    <string name="grid_contents_default">Grid is empty</string>
    <string name="results_title">Results</string>
    <string name="enter_custom_data_set_message">Enter your own custom grid below, up to 10 lines. Elements should be separated by spaces.</string>
    <string name="invalid_grid_message">Please enter a grid consisting of:\n\n-1 to 10 lines\n-5 to 100 numbers per line\n-Only numeric characters</string>
</resources>
