<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".PathOfLowestActivity">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/adjusted_scroll_content_bottom_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/select_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/enter_custom_data_set_message"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/custom_grid_contents"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/select_label"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/back"
                    android:maxLines="10"
                    android:minLines="1" />

                <TextView
                    android:id="@+id/go_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/custom_grid_contents"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:text="@string/click_go_message" />

                <Button
                    android:id="@+id/go_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/go_label"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:enabled="false"
                    android:text="@string/go_button_title" />

                <TextView
                    android:id="@+id/grid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/go_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/grid_contents_title" />

                <TextView
                    android:id="@+id/grid_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/grid_label"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/back"
                    android:fontFamily="monospace"
                    android:padding="10dp"
                    android:text="@string/grid_contents_default" />

                <TextView
                    android:id="@+id/results_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/grid_contents"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="5dp"
                    android:text="@string/results_title" />

                <LinearLayout
                    android:id="@+id/results_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/results_label"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/back"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/results_success"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/results_total_cost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="@string/no_results"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/results_path_taken"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:textAlignment="center" />
                </LinearLayout>
            </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

